--- a/src/docs/09_design_decisions.adoc
+++ b/src/docs/09_design_decisions.adoc
@@ -1,7 +1,7 @@
 [[section-design-decisions]]
 == Design Decisions
 
-== Architecture
+=== Architecture
 Peer-to-Peer (P2P). This architecture is used in a Solid application
 
 === Language
@@ -16,10 +16,10 @@ We have decided that the best language is JavaScript since the other two languag
 === Database
 For the moment we will not use any database because we do not see it necessary. As the project progresses, if we see that the project requires a database, we will use a relational database such as MySQL, as we have used them in other subjects and we already have some experience with them.
 
-== Decisiones de Diseño
+== Decisiones de DiseÃ±o
 
-== Arquitectura
-Red entre pares (P2P). Esta arquitectura es usada en una aplicación de Solid.
+=== Arquitectura
+Red entre pares (P2P). Esta arquitectura es usada en una aplicaciÃ³n de Solid.
 
 === Lenguaje
 Entre los siguientes tres lenguajes:
@@ -28,7 +28,7 @@ Entre los siguientes tres lenguajes:
 * C#
 * AngujarJS (JavaScript)
 
-Hemos decidido que el mejor lenguaje es JavaScript ya que los otros dos lenguajes(Java y C#) no tienen soporte directo de Solid y seríamos nosotros los que tendríamos que implementar un controlador que comunique con SOLID. Sin embargo, la desventaja de JavaScript es que necesitamos un nivel que de momento ningún miembro del equipo tiene. A pesar de esto, entre todos hemos visto que la mejor opción es utilizar JavaScript.
+Hemos decidido que el mejor lenguaje es JavaScript ya que los otros dos lenguajes(Java y C#) no tienen soporte directo de Solid y serÃ­amos nosotros los que tendrÃ­amos que implementar un controlador que comunique con SOLID. Sin embargo, la desventaja de JavaScript es que necesitamos un nivel que de momento ningÃºn miembro del equipo tiene. A pesar de esto, entre todos hemos visto que la mejor opciÃ³n es utilizar JavaScript.
 
 === Base de Datos
-De momento no vamos a utilizar ninguna base de datos ya que no lo vemos necesario. A medida que avance el proyecto, si vemos que el proyecto requiere de una base de datos, usaríamos una base de datos relacional como por ejemplo MySQL, ya que las hemos utilizado en otras asignaturas y ya tenemos cierta experiencia con ellas.
+De momento no vamos a utilizar ninguna base de datos ya que no lo vemos necesario. A medida que avance el proyecto, si vemos que el proyecto requiere de una base de datos, usarÃ­amos una base de datos relacional como por ejemplo MySQL, ya que las hemos utilizado en otras asignaturas y ya tenemos cierta experiencia con ellas.
