--- a/src/docs/01_introduction_and_goals.adoc
+++ b/src/docs/01_introduction_and_goals.adoc
@@ -20,20 +20,14 @@ The application will have a "home" with a list of the users who the "protagonist
 
 ****
 
-With this project we must seek to get a real private peer to peer communication between users, avoiding information leaks or security probles. Our Quality scenarios are: 
+With this project we must seek to get a real private peer to peer communication between users, avoiding information leaks or security probles. Our most important quality scenarios are:
 ****
-[options="header",cols="1,2,3"]
-|===
-| *AQ* | *Scenario* | *Priority*
-| Functional suitability | The application must correctly meet the minimum requirements for a conversation to take place between two users| High, high
-| Usability | The application must be easy to understand and use to satisfy the user| High, medium
-| Efficiency | The sending of messages must be correctly reaching the receiver in reasonable times | High, medium
-| Testability | The application must pass unit tests and integration tests correctly | High, medium
-| Maintainability | 
-Ensuring continuous improvement against errors, unexpected component failures and new requirements | Medium, high
-| Securability | Require each user to identify themselves in order to use the application and allow them to control who has access to their data | Medium, medium
-| Scalability | Although the number of users increases, the application will continue to operate with the same efficiency| Medium, medium
-|===
+
+| Functional suitability | The application must correctly meet the minimum requirements for a conversation to take place between two users. At first place we want a basic text conversation
+| Usability | The application must be easy to use. All users must be able to use the application, even users with little knowledge.
+| Efficiency | The time between sending and receiving messages must be reasonable.
+| Testability | The application must pass our unit test without any problem
+
 ****
 
 ****
