--- a/src/docs/01_introduction_and_goals.adoc
+++ b/src/docs/01_introduction_and_goals.adoc
@@ -23,8 +23,8 @@ The application will have a "home" with a list of the users who the "protagonist
 With this project we must seek to get a real private peer to peer communication between users, avoiding information leaks or security probles. Our most important quality scenarios are:
 ****
 
-| Functional suitability | The application must correctly meet the minimum requirements for a conversation to take place between two users. At first place we want a basic text conversation
-| Usability | The application must be easy to use. All users must be able to use the application, even users with little knowledge.
+. Functional suitability -> The application must correctly meet the minimum requirements for a conversation to take place between two users. At first place we want a basic text conversation
+. Usability -> The application must be easy to use. All users must be able to use the application, even users with little knowledge.
 | Efficiency | The time between sending and receiving messages must be reasonable.
 | Testability | The application must pass our unit test without any problem
 
