--- a/src/docs/04_solution_strategy.adoc
+++ b/src/docs/04_solution_strategy.adoc
@@ -1,8 +1,11 @@
 [[section-solution-strategy]]
 
+== English
+
 == Solution Strategy
 
 
+[role="arc42help"]
 ****
 
 Because of our little experience on the architecture of sofware creation some or this early decisions may change in the future
@@ -27,6 +30,37 @@ Because of the angular framework it will be easier to implement a MVC(Model View
 * Organizational decisions:
 
 The decisions about organization will be agile, we will have meetings every week were we will distribute the tasks.
+
+****
+
+== Español
+
+== Solution Strategy
+
+
+[role="arc42help"]
+****
+Debido a nuestra poca experiencia en la creacion de aquitecturas del software, algunas de las decisiones iniciales que tomamos pueden
+verse alteradas en un futuro con el descubrimiento de nuevas tecnologias
+
+* Decisiones tecnologicas:
+El lenguaje selecionado para crear la applicacion será javascrip. Se ha seleccionado por su buena integracion con solid.
+El uso de solid hara que el chat este descentralizado usando pods por lo que asumimos que no será necesaria una base de datos.
+Si finalmente se necesiota usaremos una base de datos sql por nuestro conocimiento y experiencia prebia usando este tipo de bases.
+Angular sera el framework que utilizaremos tambien por su buena integracion con solid. En la pagina oficial existe un tutorial muy sencillo para 
+la creacion de apps de solid usando angular: https://solid.inrupt.com/docs/writing-solid-apps-with-angular.
+TypeScript será otro lenguaje usado para la creación de componentes en angular.
+La interfaz grafica será creada usando html y css, esto y angular ayudaran a nuestra aplicacion a correr tanto en pcs como en moviles.
+
+* Decisiones sobre la descomposicion del sistema a nivel alto:
+
+Gracias a angular será sencillo implementar el patrón MVC para tener una mejor organizacion del codigo.
+
+* Decisiones sobre como conseguir los objetivos de calida:
+
+* Decisiones organizativas:
+
+Las decisiones sobre la organizacion serán agiles, tendremos reuniones todas las semanas donde se distribuira el trabajo.
 
 ****
 
