--- a/readme.adoc
+++ b/readme.adoc
@@ -32,7 +32,7 @@ You can run the game locally by doing the following:
 . Install Node.js dependencies with this command: 
 +
 ----
-'npm i'
+npm i
 ----
 .To run the app use
 +
@@ -65,14 +65,6 @@ To run tests execute:
 npm test
 ----
 
-== Site documentation
-
-The https://github.com/Arquisoft/dechat_es3b/tree/master/pom.xml[pom.xml] file
- has also been configured to generate site project documentation running:
-
-----
-mvn site
-----
 
 
 
