--- a/readme.adoc
+++ b/readme.adoc
@@ -6,7 +6,7 @@ image:https://travis-ci.org/Arquisoft/dechat_es3b.svg?branch=master["Build Statu
 image:https://codecov.io/gh/Arquisoft/dechat_es3b/branch/master/graph/badge.svg["Codecov",link="https://codecov.io/gh/Arquisoft/dechat_es3b"]
 image:https://api.codacy.com/project/badge/Grade/fc7dc1da60ee4e9fb67ccff782625794["Codacy code quality", link="https://www.codacy.com/app/jelabra/dechat_es3b?utm_source=github.com&utm_medium=referral&utm_content=Arquisoft/dechat_es3b&utm_campaign=Badge_Grade"]
 
-image:https://coveralls.io/repos/github/Arquisoft/dechat_es3b/badge.svg["Coverage status", link="https://coveralls.io/github/Arquisoft/dechat_es3b"]
+image:https://coveralls.io/repos/github/Arquisoft/dechat_es3b/badge.svg?branch=refactoring["Coverage status", link="https://coveralls.io/github/Arquisoft/dechat_es3b"]
 
 image:http://inch-ci.org/github/Arquisoft/dechat_es3b.svg?branch=master["Inch CI",link="https://inch-ci.org/github/Arquisoft/dechat_es3b?branch=master&pending_build=498882"]
 
