--- a/adocs/05_building_block_view.adoc
+++ b/adocs/05_building_block_view.adoc
@@ -5,3 +5,8 @@
 
 [role="arc42help"]
 ****
+=== Sending Message View
+
+The procedure of sending a new message is fairly simple. The First User sends a Message to a friend through the interface.  The interface transmits the message to deChat app which drives the message to the Pod of the principal user and to the friend's POD as well. Then deChat catches the new message from the friend's POD and send it to the interface.
+
+image:https://github.com/Arquisoft/dechat_es3b/blob/master/adocs/images/Sending.png[View,1200,600,role="center"] 
